# movie-chatbot

./: .gitignore  README.md  movies.json  pyproject.toml
app/: main.py  prompt.txt
app/templates/: index.html
eval/: golden_dataset.json  run_eval.py
