[project]
name = "movie-chatbot"
version = "0.1.0"
description = "NYT Top 50 Movies Recommendation Chatbot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "google-cloud-aiplatform>=1.49.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]